--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "241e21c6-5910-48d8-a785-954ac79dda43"
 authors = ["Ryuichi Okamoto <ryubee@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+Quadmath = "be4d8f0f-7fa4-5f49-b795-2f01399ab2dd"
+
 [compat]
+Quadmath = "0.5.13"
 julia = "1.6.0"
 
 [extras]
